# stable-baselines-playground

./: .gitignore  .~lock.gradients_log.csv#  README.md  episode_rewards.csv  gradients_log.csv  pendulum_ppo.py  pendulum_ppocalf.py  pendulum_visual_ppo.py  pendulum_visual_ppo_resume.py  plot_cnngrad.py  plot_cnnoutput.py  plotlc.py  pyproject.toml  requirements.txt  tmp.py  tmp2.py  vecnormalize_stats.pkl
analysis/: README.md
analysis/ppo_pendulum_calf_wrapper_eval/: analysis.ipynb
analysis/ppo_vispendulum_self_boost/: visual_analysis.ipynb
artifacts/: CNN_architecture.txt  README.md
bak/: pendulum_visual_ppo__no_norm_option.py
callback/: cnn_output_callback.py  grad_monitor_callback.py  plotting_callback.py
cnn_outputs/: cnn_output_step_40000.pt
controller/: energybased.py
docs/: README.md  error_resolution.md
gfx/: README.md
gymenv/: my_pendulum.py
model/: cnn.py
mygym/: __init__.py  my_pendulum.py
run/: README.md
run/ppo_pendulum_calf_wrapper_eval/: README.md  args_parser.py  evaluation.sh  evaluation_loop.sh  pendulum_controller.py  pendulum_ppo.py  pendulum_ppo_eval_calf_wrapper.py
run/ppo_vispendulum_default/: README.md  pendulum_visual_ppo.py
run/ppo_vispendulum_self_boost/: README.md  __init__.py  args_parser.py  evaluation_visual.sh  ppo_vispendulum.py  (+2 more)
snippets/: README.md  pendulum_ppocalf.py  plot_cnngrad.py  plotlc.py  test_visual_pendulum_cnn.py  test_visual_pendulum_cnn_stacked.py  test_visual_pendulum_simple.py
src/: README.md
test/: test_visual_pendulum.py  test_visual_pendulum_cnn.py  test_visual_pendulum_simple.py
(+21 files in other folders)
