[tool.poetry]
name = "visualrl"
version = "0.1.0"
description = ""
authors = ["Pavel Osinenko <osinenkop@yandex.ru>"]
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "0.29.0"
matplotlib = "3.9.2"
numpy = "2.1.3"
pandas = "2.2.3"
pygame = "2.6.1"
pyparsing = "3.2.0"
PyQt5 = "5.15.11"
PyQt5-Qt5 = "5.15.15"
PyQt5_sip = "12.15.0"
scipy = "1.14.1"
six = "1.16.0"
stable_baselines3 = "2.3.2"
sympy = "1.13.1"
torch = "2.5.1"
mlflow = "2.18.0"
opencv-python = "4.10.0.84"
opencv-python-headless = "4.10.0.84"
tyro = "0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
